02-pod-storage.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-storage-01
spec:
  containers:
    - name: test
      image: rkalluru/learnk8s:rhel9-bare
      volumeMounts:
        - name: empty-dir
          mountPath: /opt
    - name: nginx
      image: nginx
      volumeMounts:
        - name: empty-dir
          mountPath: /usr/share/nginx/html
  volumes:
    - name: empty-dir
      emptyDir: {}
