03-pod-initcontainer.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-storage-01
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - name: empty-dir
          mountPath: /usr/share/nginx/html
  volumes:
    - name: empty-dir
      emptyDir: {}
