07-replica-set.yml
apiVersion: v1
kind: Pod
metadata:
  name: p3
  labels:
    app: nginx
spec:
  containers:
    - name: nginx
      image: nginx
