27-taints.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-non-tolerated
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-tolerated
spec:
  containers:
    - name: nginx
      image: nginx
  tolerations:
  - key: "project"
    operator: "Equal"
    value: "roboshop"
    effect: "NoExecute"
