28-topology-constraints.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-demo
  labels:
    project: example
    app: nginx
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
