19-network-policy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    ns: web
---
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    ns: app
---
kind: Pod
apiVersion: v1
metadata:
  name: web-01
  namespace: web
  labels:
    appType: web
spec:
  containers:
    - name: nginx
      image: nginx
---
kind: Pod
apiVersion: v1
metadata:
  name: app-01
  namespace: app
  labels:
    appType: app
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
spec:
  type: ClusterIP
  selector:
    appType: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
spec:
  type: ClusterIP
  selector:
    appType: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
kind: Pod
apiVersion: v1
metadata:
  name: debug
  namespace: web
spec:
  containers:
    - name: debug
      image: rkalluru/debug
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-np-allow-complete-ns
  namespace: app
spec:
  podSelector:
    matchLabels:
      appType: app
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: web
    - podSelector:
        matchLabels:
          appType: web
    ports:
    - protocol: TCP
      port: 80
  egress:
    - {}
